fixed highscore section visibility

--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -36,8 +36,8 @@ a {
     padding: 5px;
     cursor: pointer;
     margin: 1px;
-    
 }
+
 h2 {
     padding-bottom: 10px;
 }
@@ -63,7 +63,7 @@ button:hover {
 }
 
 /* All button stylings */
-.start-quiz button, .question-container button, input[type=submit], .highscores {
+.start-quiz button, .question-container button, input[type=submit], .highscores button {
  background-color: var(--Purple);
  color: white;
  padding: 5px;
